@@ -8,16 +8,16 @@
 #enddef
 
 [era]
-    id=era_default
-    name= _ "Default"
+    id=era_turmoil
+    name= _ "Era of Turmoil"
 
     {RANDOM_SIDE}
-    {multiplayer/factions/loyalists-default.cfg}
-    {multiplayer/factions/rebels-default.cfg}
-    {multiplayer/factions/northerners-default.cfg}
-    {multiplayer/factions/undead-default.cfg}
-    {multiplayer/factions/knalgans-default.cfg}
-    {multiplayer/factions/drakes-default.cfg}
+    {multiplayer/factions/loyalists-turmoil.cfg}
+    {multiplayer/factions/rebels-turmoil.cfg}
+    {multiplayer/factions/northerners-turmoil.cfg}
+    {multiplayer/factions/undead-turmoil.cfg}
+    {multiplayer/factions/knalgans-turmoil.cfg}
+    {multiplayer/factions/drakes-turmoil.cfg}
 [/era]
 
 [era]
