@@ -10,6 +10,8 @@ Version 1.3.6+svn:
       "Use map settings" on in a darker font. (patch #771 by uso)
     * The random starting time of day setting is will now be remembered if 
       "Use map settings" is used.
+   * "Default Era" is now renamed to "Era of Turmoil" (bug #4201) in
+     accordance with the master history.
 
   * User interface
     * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
