@@ -15,6 +15,8 @@ Version 1.3.6+svn:
      settings" on in a darker font. (patch #771 by uso)
    * the random start ToD option is now properly saved and loaded when use map
      default is used (bug #9532)
+   * "Default Era" is now renamed to "Era of Turmoil" (bug #4201) in
+     accordance with the master history.
  * user interface:
    * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
    * Add an additional line below the minimap in the "Multiplayer->Create game"
